--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Kiwi Maru', serif;
+	font-family: 'Klee One', cursive;
 	font-weight: 100;
 	scroll-behavior: smooth;
 }
@@ -15,18 +15,18 @@ section {
 }
 
 h1 {
-	font-size: 5rem;
+	font-size: 3rem;
 	line-height: 2;
-	font-family: 'Ubuntu', sans-serif;
+	font-family: 'Klee One', cursive;
 	font-weight: bold;
 }
 
 h2 {
-	font-size: 2.2rem;
+	font-size: 2rem;
 }
 
 p {
-	font-size: 1.1rem;
+	font-size: 1rem;
 }
 
 img {
@@ -70,14 +70,14 @@ nav ul li {
 
 #title {
 	font-size: 1.8rem;
-	font-family: 'Ubuntu', sans-serif;
+	font-family: 'Klee One', cursive;
 	text-transform: uppercase;
 }
 
 /* Home Section */
 
 .home {
-	background-color: #7E1757;
+	background-color: #486352;
 }
 
 .home div {
@@ -86,6 +86,10 @@ nav ul li {
 }
 
 /*About Section*/
+
+.about {
+	background-color: #486352;
+}
 
 .about div {
 	margin: 8%;
